--- a/1,2,3-propane triol.html
+++ b/1,2,3-propane triol.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.1,2,3-propane triol.glb"
+src="./1,2,3-propane triol.glb"
 alt="1,2,3-propane triol"
 auto-rotate
 camera-controls
