--- a/1,2-ethylene glycol.html
+++ b/1,2-ethylene glycol.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.1,2-ethylene glycol.glb"
+src="./1,2-ethylene glycol.glb"
 alt="1,2-ethylene glycol"
 auto-rotate
 camera-controls
