--- a/1-butanol.html
+++ b/1-butanol.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.1-butanol.glb"
+src="./1-butanol.glb"
 alt="1-butanol"
 auto-rotate
 camera-controls
