--- a/1-propanol.html
+++ b/1-propanol.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.1-propanol.glb"
+src="./1-propanol.glb"
 alt="1-propanol"
 auto-rotate
 camera-controls
