--- a/2-methy 1-lpropanol.html
+++ b/2-methy 1-lpropanol.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.2-methy 1-lpropanol.glb"
+src="./2-methy 1-lpropanol.glb"
 alt="2-methy 1-lpropanol"
 auto-rotate
 camera-controls
