--- a/diethyl ether.html
+++ b/diethyl ether.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.diethyl ether.glb"
+src="./diethyl ether.glb"
 alt="diethyl ether"
 auto-rotate
 camera-controls
