--- a/dimethyl ether.html
+++ b/dimethyl ether.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.dimethyl ether.glb"
+src="./dimethyl ether.glb"
 alt="dimethyl ether"
 auto-rotate
 camera-controls
