--- a/ethanol.html
+++ b/ethanol.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.ethanol.glb"
+src="./ethanol.glb"
 alt="ethanol"
 auto-rotate
 camera-controls
