--- a/methanol.html
+++ b/methanol.html
@@ -17,7 +17,7 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="/.methanol.glb"
+src="./methanol.glb"
 alt="methanol"
 auto-rotate
 camera-controls
