--- a/2-methyl 2-propanol.html
+++ b/2-methyl 2-propanol.html
@@ -17,8 +17,8 @@ model-viewer#reveal {
 <model-viewer
 ar
 ar-modes="scene-viewer webxr quick-look"
-src="./2-methy 2-propanol.glb"
-alt="2-methy 2-propanol"
+src="./2-methyl 2-propanol.glb"
+alt="2-methyl 2-propanol"
 auto-rotate
 camera-controls
 ></model-viewer>
